--- a/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/OrdenesDeTrabajo/CreateForEquipo.cshtml
@@ -23,11 +23,10 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>
-                                    @Html.DisplayNameFor(model => model.FechaInicio)
-                                    @Html.HiddenFor(model => model.FechaInicio)
+                                    @Html.DisplayNameFor(model => model.NumeroReferencia)
                                 </label>
                                 <p class="form-control-static">
-                                    @Html.DisplayFor(model => model.FechaInicio)
+                                    @Html.DisplayFor(model => model.NumeroReferencia)
                                 </p>
                             </div>
                             <div class="form-group">
@@ -47,21 +46,25 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>
-                                    @Html.DisplayNameFor(model => model.NumeroReferencia)
+                                    @Html.DisplayNameFor(model => model.FechaInicio)
+                                    @Html.HiddenFor(model => model.FechaInicio)
                                 </label>
                                 <p class="form-control-static">
-                                    @Html.DisplayFor(model => model.NumeroReferencia)
+                                    @Html.DisplayFor(model => model.FechaInicio)
+                                </p>
+                            </div>
+                            
+                            <div class="form-group">
+                                <label>
+                                    &nbsp;
+                                    
+                                </label>
+                                <p class="form-control-static">
+                                    &nbsp;
                                 </p>
                             </div>
 
-                            <div class="form-group">
-                                <label>
-                                    @Html.DisplayNameFor(model => model.Equipo.Ubicacion)
-                                </label>
-                                <p class="form-control-static">
-                                    @Html.DisplayFor(model => model.Equipo.Ubicacion.Nombre)
-                                </p>
-                            </div>
+
                             <div class="form-group">
                                 <label class="control-label switch-label">Prioridad</label>
                                 <div class="btn-group" data-toggle="buttons">
@@ -100,7 +103,7 @@
             <div class="form-group">
                 <a href="@Url.Action("Index")" class="btn btn-default" style="margin-bottom:5px;"> Volver</a>
                 <input type="submit" name="action" value="Guardar" class="btn btn-primary" style="margin-bottom:5px;" />
-                <input type="submit" name="action" value="Guardar y diagnosticar" class="btn btn-info" style="margin-bottom:5px;" />
+                <!--<input type="submit" name="action" value="Guardar y diagnosticar" class="btn btn-info" style="margin-bottom:5px;" />-->
             </div>
         </div>
     </div>
