--- a/EquiposTecnicosSN.Web/Views/Shared/_OrdenesDeTrabajoEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_OrdenesDeTrabajoEquipo.cshtml
@@ -40,7 +40,7 @@
                                 {
                                     string cssClass;
 
-                                    if (item.Estado != OrdenDeTrabajoEstado.Cerrado)
+                                    if (item.Estado != OrdenDeTrabajoEstado.Cerrada)
                                     {
                                         switch (item.Prioridad)
                                         {
@@ -63,7 +63,7 @@
                                     }
                                     else
                                     {
-                                        cssClass = "";
+                                        cssClass = "info";
                                     }
                                         <tr class="@cssClass">
                                             <td>
@@ -78,23 +78,24 @@
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Descripcion)
                                             </td>
-                                            <td>
+                                            <td><!--                                                    
                                                 <a class="btn btn-default btn-xs"
                                                    href="@Url.Action("Edit", "OrdenesDeTrabajo", new { id = item.OrdenDeTrabajoId }, null)"
                                                    title="Editar Orden de trabajo">
                                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                                </a>
-
+                                                </a>-->
+                                                
                                                 <a class="btn btn-default btn-xs"
                                                    href="@Url.Action("Details", "OrdenesDeTrabajo", new { id = item.OrdenDeTrabajoId }, null)"
                                                    title="Ver Orden de trabajo">
                                                     <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                                </a>
+                                                </a><!--                                                        
                                                 <a class="btn btn-default btn-xs"
                                                    href="@Url.Action("Delete", "OrdenesDeTrabajo", new { id = item.OrdenDeTrabajoId }, null)"
                                                    title="Eliminar Orden de trabajo">
                                                     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                                                 </a>
+                                                    -->
                                             </td>
                                         </tr>
                                         }
